Upgrade to AWS SDK v2